; ModuleID = '/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_os_posix.c_mz_os_read_dir.c'
source_filename = "/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_os_posix.c_mz_os_read_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dirent = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.dirent* @mz_os_read_dir(i32* %0) #0 {
  %2 = alloca %struct.dirent*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store %struct.dirent* null, %struct.dirent** %2, align 8
  br label %10

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call %struct.dirent* @readdir(i32* %8)
  store %struct.dirent* %9, %struct.dirent** %2, align 8
  br label %10

10:                                               ; preds = %7, %6
  %11 = load %struct.dirent*, %struct.dirent** %2, align 8
  ret %struct.dirent* %11
}

declare dso_local %struct.dirent* @readdir(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
